[gd_scene load_steps=2 format=3 uid="uid://diex08t5n14ga"]

[ext_resource type="Script" path="res://inv_stuff/inventory/Slot.gd" id="1_dfbn0"]

[node name="Slot" type="Panel"]
custom_minimum_size = Vector2i(64, 64)
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_dfbn0")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2i(64, 64)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 60.0
offset_bottom = 60.0
ignore_texture_size = true
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 26.0
grow_horizontal = 0
text = "2"
horizontal_alignment = 2

[node name="AmountLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 42.0
offset_bottom = 68.0
grow_horizontal = 0
text = "2"
horizontal_alignment = 2

[node name="ContainerModeLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -62.0
offset_top = 41.0
offset_right = -22.0
offset_bottom = 67.0
grow_horizontal = 0
text = "v"

[connection signal="gui_input" from="." to="." method="_on_slot_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_slot_mouse_exited"]
